--- a/login.html
+++ b/login.html
@@ -25,13 +25,13 @@
                                 <input autocomplete="off" type="email" placeholder="Email" name="email" class="form-control my-3 p-4"
                                  id="form" value="example@gmail.com" required> 
                                 <!--Kur deshirojme te krijojme nje form ne bootstrap duhet te perdorim clasen form-control-->
-                                <div id="email_error">Please fill up your email</div>
+<!--                                 <div id="email_error">Please fill up your email</div> -->
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="col-lg-7">
                                 <input type="password" placeholder="Password" name="password" class="form-control my-3 p-4" id="form">
-                                <div id="pass_error">Please fill up your password</div>
+<!--                                 <div id="pass_error">Please fill up your password</div> -->
                             </div>
                         </div>
                         <div class="form-row">
