--- a/login.html
+++ b/login.html
@@ -6,11 +6,14 @@
     <link rel="shortcut icon" type="image/x-icon" href="logo3.png"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="Login.css">
+    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="signup.html">
+
     <title>Skin care</title>
   </head>
   <body>
-     <section class="Form"> <!--Ne bootstrap perdorim section-->
+    <!-- <form method="post" action = "login.php"> -->
+     <section class="Form" > <!--Ne bootstrap perdorim section-->
         <div class="container">
             <div class="row no-gutters"> <!--We use the row-no-gutters class to remove the gutters from a row and its columns-->
                 <div class="col-lg-5">  <!--5 columns-->
@@ -19,19 +22,19 @@
                 <div class="col-lg-7 px-5 pt-5">
                     <h1 class="h1"><b>Join us</b></h1>
                     <h4>Sign into your account</h4>
-                    <form class="login_form" method="post" action="Home.html" name="form" onsubmit="return validated()">
+                    <form class="login_form" method="post" action = "login.php" name="form" onsubmit="return validated()">
                         <div class="form-row">
                             <div class="col-lg-7"> <!--7 columns-->
                                 <input autocomplete="off" type="email" placeholder="Email" name="email" class="form-control my-3 p-4"
-                                 id="form" value="example@gmail.com" required> 
+                                 id="form" required> 
                                 <!--Kur deshirojme te krijojme nje form ne bootstrap duhet te perdorim clasen form-control-->
-<!--                                 <div id="email_error">Please fill up your email</div> -->
+                                <!-- <div id="email_error">Please fill up your email</div> -->
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="col-lg-7">
                                 <input type="password" placeholder="Password" name="password" class="form-control my-3 p-4" id="form">
-<!--                                 <div id="pass_error">Please fill up your password</div> -->
+                                <!-- <div id="pass_error">Please fill up your password</div> -->
                             </div>
                         </div>
                         <div class="form-row">
@@ -41,11 +44,11 @@
                         </div>
                         <label class="remember-me"><input type="checkbox">Remember me</label>
                         <a href="#forgot-pw" class="forgot-pw"><i>Forgot password?</i></a>
-                        <div ><p>Don't have an account? <a href="#register-here" class="register-here"><i>Register here</i></a></p></div>
+                        <div ><p>Don't have an account? <a href="signup.html" class="register-here"><i>Register here</i></a></p></div>
                     </form> 
 
                     <div id="forgot-pw">
-                        <form action="" class="form">
+                        <form  class="form" method="post" action = "login.php">
                             <a href="#" class="close">&times;</a>
                             <h2>Forgot your password</h2>
                             <p> Please enter the email address you'd like your <br>password 
@@ -61,33 +64,30 @@
                         </form>
                     </div>
 
-                    <div id="register-here">
-                        <form action="" class="form">
+                    <!-- <div id="register-here">
+                        <form method="post" action = "login.php" class="form">
                             <a href="#" class="close">&times;</a>
                             <h2>SIGN UP</h2>
                             <p id="pa">It's free and it only takes a minute</p>
                             <div class="form-row">
                                 <div class="col-lg-7">
-                                    <input type="text" placeholder="Username" name="email" class="form-control my-3 p-4" id="id1" >
-                                </div>
-                            </div>
-                            <div class="form-row">
-                                <div class="col-lg-7">
-                                    <input type="password" placeholder="Email address" name="password" class="form-control my-3 p-4" id="id1">
-                                </div>
-                            </div>
-                            <div class="form-row">
-                                <div class="col-lg-7">
+                                    <input type="text" placeholder="Username" class="form-control my-3 p-4" id="id1" >
+                                    <input type="text" placeholder="Role" class="form-control my-3 p-4" id="id1" >
+
+                                    <input type="email" placeholder="Email address" name="email" class="form-control my-3 p-4" id="id1">
+
                                     <input type="password" placeholder="Password" name="password" class="form-control my-3 p-4" id="id1">
+                                    <input type="password" placeholder="Confirm Password" name="password" class="form-control my-3 p-4" id="id1">
                                 </div>
                             </div>
                             <input type="submit" value="Submit" class="submit-btn my-3 px-4">
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
      </section>
+    <!-- </form>      -->
      <script src="Login.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
