--- a/ContactUs.html
+++ b/ContactUs.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="bootstrap.min1.css">
     <!-- style css -->
     <link rel="stylesheet" href="ContactUs.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="footer.css">
     <!-- Responsive-->
     <link rel="stylesheet" href="css/responsive.css">
     <!-- fevicon -->
