--- a/about-us.html
+++ b/about-us.html
@@ -9,6 +9,11 @@
 	<link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="footer.css">
 	<link rel="stylesheet" href="home_style.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="footer.css">
+	<script src="https://kit.fontawesome.com/831b733ec6.js" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="logo3.png"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
