--- a/about-us.html
+++ b/about-us.html
@@ -17,6 +17,7 @@
 	
 	<link rel="shortcut icon" type="image/x-icon" href="logo3.png"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+	<script src="https://app.enzuzo.com/apps/enzuzo/static/js/__enzuzo-cookiebar.js?uuid=f4accd94-e6da-11ed-8b76-c317f674c707"></script>
 	<script>
 		function playAudio() {
 			document.getElementById("audio1").play();
@@ -47,6 +48,7 @@
         margin-top: 50px;
       }
 
+
 		</style>
 	
 </head>	
@@ -64,6 +66,7 @@
 			</ul>
 		</nav>
 	</header>
+
 	
 	<div class="section">
 		<div class="container">
@@ -130,6 +133,7 @@
 			</div>
 		</div>
 	</div>
+
 
 	<div id="multipleimg">
 		<p>We grow our business by creating unified brand experiences people love</p>
