--- a/SkinCareTips.html
+++ b/SkinCareTips.html
@@ -10,6 +10,7 @@
     <!-- <link rel="stylesheet" href="header.css"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/831b733ec6.js" crossorigin="anonymous"></script>
+    <script src="https://app.enzuzo.com/apps/enzuzo/static/js/__enzuzo-cookiebar.js?uuid=f4accd94-e6da-11ed-8b76-c317f674c707"></script>
 
 </head>
 <body>
