--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
         <title> Pearl skin </title>
         <link rel="stylesheet" href="home_style.css">
         <link rel="shortcut icon" type="image/x-icon" href="logo3.png"/>
+        <script src="https://app.enzuzo.com/apps/enzuzo/static/js/__enzuzo-cookiebar.js?uuid=f4accd94-e6da-11ed-8b76-c317f674c707"></script>
         <script src="https://kit.fontawesome.com/831b733ec6.js" crossorigin="anonymous"></script>
     <section class = "all1"> 
         <!-- jquery cdn-->
