--- a/tips.html
+++ b/tips.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="tips.css">
     <script src="tips.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://app.enzuzo.com/apps/enzuzo/static/js/__enzuzo-cookiebar.js?uuid=f4accd94-e6da-11ed-8b76-c317f674c707"></script>
     
 
     <script>
