--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
                         </div>
                         <label class="remember-me"><input type="checkbox">Remember me</label>
                         <a href="#forgot-pw" class="forgot-pw"><i>Forgot password?</i></a>
-                        <div ><p>Don't have an account? <a href="signup.html" class="register-here"><i>Register here</i></a></p></div>
+                        <div ><p>Don't have an account? <a href="signup.php" class="register-here"><i>Register here</i></a></p></div>
                     </form> 
 
                     <div id="forgot-pw">
