--- a/signup.html
+++ b/signup.html
@@ -1,18 +1,4 @@
-<?php
 
-include 'config.php';
-
-if(isset($_POST['submit'])){
-    $name = mysqli_real_escape_string($conn, $_POST['name']);
-    $email = mysqli_real_escape_string($conn, $_POST['email']);
-    $pass = mysqli_real_escape_string($conn, md5($_POST['password']));
-    $cpass = mysqli_real_escape_string($conn, md5($_POST['cpassword']));
-    
-
-
-}
-
-?>
 
 <!Doctype html>
 <html lang="en">
@@ -24,7 +10,7 @@ if(isset($_POST['submit'])){
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://app.enzuzo.com/apps/enzuzo/static/js/__enzuzo-cookiebar.js?uuid=f4accd94-e6da-11ed-8b76-c317f674c707"></script>
     <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet" href="signup.php">
+    <link rel="stylesheet" href="signup.html">
 
     <title>Skin care</title>
   </head>
