--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,4 @@
 
-
 <!Doctype html>
 <html lang="en">
   <head>
@@ -37,7 +36,8 @@
                                         <option value="User">User</option>
                                         <option value="Admin">Admin</option>
                                     </select>
-                                    <input type = "file" class = "box" accept="image/jpg, image/jpeg, imgae/png">
+                                    <!-- <br><br>
+                                    <input type = "file" class = "box" accept="image/jpg, image/jpeg, imgae/png"> -->
                                 </div>
                             </div>
                             <input type="submit" value="Submit" class="submit-btn my-3 px-4" name="submit">
