--- a/header.html
+++ b/header.html
@@ -20,6 +20,7 @@
                 <li><a href="about-us.html">About us</a></li>
                 <li><a href="Login.html">Log in</a></li>
                 <li><a href="contact-us.html">Contact us</a></li>
+                <li><a href="faq.php">FAQ</a> </li>
             </ul>
         </nav>
   </header>
