--- a/home.html
+++ b/home.html
@@ -40,6 +40,7 @@
                       <li><a href="products.html">Products</a></li>
                       <li><a href="about-us.html">About us</a></li>
                       <li><a href="Login.html">Log in</a></li>
+                      <li><a href="faq.php">FAQ</a></li>
                       <li><a href="SkinCareTips.html">Skin Care Tips</a></li>
                   </ul>
               </nav>
