--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
                       <li><a href="home.html">Home</a></li>
                       <li><a href="products.html">Products</a></li>
                       <li><a href="about-us.html">About us</a></li>
-                      <li><a href="Login.html">Log in</a></li>
+                      <li><a href="login.php">Log in</a></li>
                       <li><a href="faq.php">FAQ</a></li>
                       <li><a href="SkinCareTips.html">Skin Care Tips</a></li>
                   </ul>
