--- a/src/about-us.html
+++ b/src/about-us.html
@@ -7,7 +7,9 @@
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 	<link rel="stylesheet" href="about-us.css">
 	<link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="footer.css">
+	<link rel="stylesheet" href="header.html">
+
+    <link rel="stylesheet" href="footer.cs">
 	<link rel="stylesheet" href="home_style.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
