--- a/src/SkinCareTips.html
+++ b/src/SkinCareTips.html
@@ -22,7 +22,7 @@
 				<li><a href="home.html">Home</a></li>
 				<li><a href="products.html">Products</a></li>
 				<li><a href="about-us.html" class="active">About us</a></li>
-				<li><a href="Login.html" target="_blank">Log in</a></li>
+				<li><a href="login.php  " target="_blank">Log in</a></li>
 				<li><a href="SkinCareTips.html">Skin Care Tips</a></li>
 			</ul>
 		</nav>
