--- a/src/about-us.html
+++ b/src/about-us.html
@@ -61,9 +61,9 @@
 		<nav>
 			<ul class="nav_linqet">
 				<li><a href="home.html">Home</a></li>
-				<li><a href="products.html">Products</a></li>
+				<li><a href="products.php">Products</a></li>
 				<li><a href="about-us.html" class="active">About us</a></li>
-				<li><a href="Login.html" target="_blank">Log in</a></li>
+				<li><a href="Login.php" target="_blank">Log in</a></li>
 				<li><a href="SkinCareTips.html">Skin Care Tips</a></li>
 			</ul>
 		</nav>
