--- a/src/home.html
+++ b/src/home.html
@@ -37,7 +37,7 @@
               <nav>
                   <ul class="nav_linqet">
                       <li><a href="home.html">Home</a></li>
-                      <li><a href="products.html">Products</a></li>
+                      <li><a href="products.php">Products</a></li>
                       <li><a href="about-us.html">About us</a></li>
                       <li><a href="login.php">Log in</a></li>
                       <li><a href="faq.php">FAQ</a></li>
