--- a/src/about-us.html
+++ b/src/about-us.html
@@ -20,7 +20,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="logo3.png"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 	<script src="https://app.enzuzo.com/apps/enzuzo/static/js/__enzuzo-cookiebar.js?uuid=f4accd94-e6da-11ed-8b76-c317f674c707"></script>
-	<script>
+	<!-- <script>
 		function playAudio() {
 			document.getElementById("audio1").play();
 		}
@@ -29,10 +29,10 @@
     $("#panel").slideToggle("slow");
   });
 });
-	</script>
+	</script> -->
 	<style>
 		body {
-		  background-image: url('fotot/background-image.jpg');
+		  background-image: url('../fotot/background-image.jpg');
 		  background-repeat: no-repeat;
 		  background-attachment: fixed;
 		  background-size: 100% 100%;
@@ -56,8 +56,8 @@
 </head>	
 <body>
 	<header>
-		<a class="logo" href="#"><img src="fotot/logo2.png" id="logo" alt="Logo" style="width:100px"></a>
-		<div id="panel"><img src="fotot/slide1.png" id="panel1"></div>
+		<a class="logo" href="#"><img src="../fotot/logo2.png" id="logo" alt="Logo" style="width:100px"></a>
+		<div id="panel"><img src="../fotot/slide1.png" id="panel1"></div>
 		<nav>
 			<ul class="nav_linqet">
 				<li><a href="home.html">Home</a></li>
@@ -131,7 +131,7 @@
 				</div>
 			</div>
 			<div class="image-section">
-				<img src="fotot/aboutUs.jpg" style="width:250px,height-300px">
+				<img src="../fotot/aboutUs.jpg" style="width:250px,height-300px">
 			</div>
 		</div>
 	</div>
@@ -145,7 +145,7 @@
 		<div class="div">
 		  <div class=" div1_footer ">
 			<div class="div2 div_box">
-			  <img id= "div_img" src="fotot/logo2.png">
+			  <img id= "div_img" src="../fotot/logo2.png">
 			  <p>Your skincare place </p>
 			</div>
 	
