--- a/src/SkinCareTips.html
+++ b/src/SkinCareTips.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <header>
-		<a class="logo" href="#"><img src="fotot/logo2.png" id="logo" alt="Logo" style="width:100px"></a>
-		<div id="panel"><img src="fotot/slide1.png" id="panel1"></div>
+		<a class="logo" href="#"><img src="../fotot/logo2.png" id="logo" alt="Logo" style="width:100px"></a>
+		<div id="panel"><img src="../fotot/slide1.png" id="panel1"></div>
 		<nav>
 			<ul class="nav_linqet">
 				<li><a href="home.html">Home</a></li>
@@ -35,7 +35,7 @@
         <table class="tips" width="1500" height="400">
            <tr>
             <td width="120" rowspan="7" >
-                <img src="fotot/skin2.jpg"  width="400px">
+                <img src="../fotot/skin2.jpg"  width="400px">
             </td>
             <td colspan="2" id="id1">
                 <h1><b>Want More Skincare Tips?</b></h1>
@@ -128,9 +128,9 @@
 
  <table border="0px" class="tabela">
     <tr>
-        <td><img src="fotot/skin6.jpg" alt="foto e produktit" class="pfoto"></td>
-        <td><img src="fotot/skin4.jpg" alt="foto e produktit" class="pfoto"></td>
-        <td><img src="fotot/skin5.jpg" alt="foto e produktit" class="pfoto"></td>
+        <td><img src="../fotot/skin6.jpg" alt="foto e produktit" class="pfoto"></td>
+        <td><img src="../fotot/skin4.jpg" alt="foto e produktit" class="pfoto"></td>
+        <td><img src="../fotot/skin5.jpg" alt="foto e produktit" class="pfoto"></td>
     </tr>
     <tr id="emri-produktit">
         <td><b><h3>How to apply your skin care <br> 
@@ -217,7 +217,7 @@
     <div class="div">
       <div class=" div1_footer ">
         <div class="div2 div_box">
-          <img id= "div_img" src="fotot/logo2.png">
+          <img id= "div_img" src="../fotot/logo2.png">
           <p>Your skincare place </p>
         </div>
 
