--- a/src/SkinCareTips.html
+++ b/src/SkinCareTips.html
@@ -90,7 +90,7 @@
             With regular use, eliminates dark circles, smoothes facial wrinkles, relieves swelling, 
              moisturizes the skin, <br>and fills it with nutrients.
         </p>
-        <button type="submit" onclick="location.href='products.html'" class="btn my-3 px-4" >Buy it now</button>
+        <button type="submit" onclick="location.href='products.php'" class="btn my-3 px-4" >Buy it now</button>
         
      </td>
     </tr>
@@ -113,7 +113,7 @@
             brightens, tightens and hydrates for a smooth, 
             <br>even and energised complexion that's all glow without the irritation.
         </p>
-        <button type="submit" onclick="location.href='products.html'" class="btn my-3 px-4" >Buy it now</button>
+        <button type="submit" onclick="href='products.php'" class="btn my-3 px-4" >Buy it now</button>
      </td>
     </tr>
  </table>
@@ -197,7 +197,7 @@
               <option value="rinesa.zuzaku@gmail.com">
               <option value="rinesa.bislimi@gmail.com">
               <option value="vijola.neziraj@gmail.com">
-              <option value="gentrit.@gmail.com">
+              <option value="gentrit.bytyqi@gmail.com">
 
               
             </datalist>
